.gitignore: Add glog alias for grep log

--- a/Git/.gitconfig
+++ b/Git/.gitconfig
@@ -6,6 +6,8 @@ quotepath = off
 editor = code --wait
 [alias]
 alias = !git config --get-regexp ^alias\\. | sed -e s/^alias\\.// -e s/\\ /\\ =\\ /
+# glog: grep log
+glog = "!f() { git log --pretty=basic --name-status --grep=$1; }; f"
 ff = merge --ff-only
 last = log -1 HEAD
 msg = commit --allow-empty -m
