Add 'zip' alias to .gitconfig

--- a/Git/.gitconfig
+++ b/Git/.gitconfig
@@ -13,6 +13,7 @@ last = log -1 HEAD
 msg = commit --allow-empty -m
 refresh = !git stash -u && git switch main && git pull && git switch - && git rebase main && git stash pop
 undo = reset --soft HEAD^
+zip = archive --format=zip -o latest.zip HEAD
 [push]
 default = current
 [pull]
