--- a/.gitconfig
+++ b/.gitconfig
@@ -11,7 +11,7 @@ alias = !git config --get-regexp ^alias\\. | sed -e s/^alias\\.// -e s/\\ /\\ =\
 glog = "!f() { git log --pretty=basic --name-status --grep=$1; }; f"
 ff = merge --ff-only
 last = log -1 HEAD
-msg = commit --allow-empty -m
+msg = commit -m
 refresh = !git stash -u && git switch main && git pull && git switch - && git rebase main && git stash pop
 undo = reset --soft HEAD^
 zip = archive --format=zip -o latest.zip HEAD
