feat(.pythonrc): add original name of `Decimal` and `Fraction`

--- a/.pythonrc
+++ b/.pythonrc
@@ -1,4 +1,6 @@
+from decimal import Decimal
 from decimal import Decimal as D
+from fractions import Fraction
 from fractions import Fraction as F
 from importlib import reload
 from math import *
