--- a/.gitconfig
+++ b/.gitconfig
@@ -19,12 +19,12 @@
 
 	# ---
 
-	# alias: list all aliases
+	# alias: list all aliases.
 	alias = !git config --get-regexp ^alias\\. | sed -e s/^alias\\.// -e s/\\ /\\ =\\ /
 	file = log --follow -p
 	graph = log --graph --oneline
-	# refresh: update main branch and update current branch with main
-	refresh = !git stash -u && git switch main && git pull && git switch - && git rebase main && git stash pop
+	# refresh: refresh current branch by origin/$branch.
+	refresh = "!f() { git stash -u; branch=${1:-$(git rev-parse --abbrev-ref HEAD)}; git fetch origin $branch; git rebase origin/$branch; git stash pop; }; f"
 	wip = "!git add -A; git rm $(git ls-files --deleted) 2>/dev/null; git commit --no-verify --no-gpg-sign -m \"--wip-- [skip ci]\""
 [push]
 	default = current
