--- a/config
+++ b/config
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 ./batch_relink . ~ .inputrc .tmux.conf
-./batch_relink . ~ .ssh/
+cp -a ~/.ssh/. .ssh/; ./batch_relink . ~ .ssh/
 
 ./batch_relink . ~ .bashrc
 ./batch_relink . ~ .gitconfig .vimrc
