--- a/.gitconfig
+++ b/.gitconfig
@@ -22,6 +22,9 @@
 	back = "!f() { git switch -; git stash pop; }; f"
 	wip = "!git add -A; git rm $(git ls-files --deleted) 2>/dev/null; git commit --no-verify --no-gpg-sign -m \"--wip-- [skip ci]\""
 
+	# -- workspace --
+	clean-ignored = clean -dX
+
 	# -- index -> repo --
 	amend = commit --amend -C HEAD
 
